add logo for company and add styles

--- a/src/app/[lng]/_components/style.css
+++ b/src/app/[lng]/_components/style.css
@@ -291,11 +291,11 @@ background-size: cover;
     background-position: top;
 }
 .swiper-offer{
-    height: initial;
+    height: initial !important;
     padding-bottom: 40px !important;
 }
 .swiper-offer .swiper-slide{
-    display: flex;
+/*    display: flex;*/
 }
 
   /*----------hero footer------------*/
