fix all erorrs consolde and styles for booking

--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -104,6 +104,9 @@ body{
     {
       display: none !important;
     }
+   .main-slider .swiper-pagination {
+        margin-bottom: -5px !important;
+    }
 }
 
 
