--- a/src/app/[lng]/_components/style.css
+++ b/src/app/[lng]/_components/style.css
@@ -303,8 +303,10 @@ background-size: cover;
 /*why*/
 .why-us .content{
         background-image: url("../../../../public/imgs/why-us-overlay.avif");
+/*
 background-size: cover;
     background-position: center;
+*/
 }
 
   /*----------hero footer------------*/
