--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -414,8 +414,50 @@ body{
     animation: heartbeat 1.5s ease-in-out infinite;
   }
 
+/*layout-loading*/
+.layout-loader{
+    background-color: white;
+    width: 100%;
+    height: 100vh;
+}
+.loader {
+background: gray;
+  position: relative;
+  width: 120px;
+  height: 120px; 
+    border-radius: 50%
+
+}
 
 
+.layout-loader .company-logo{ 
+     width: 116px;
+  height: 116px; 
+     background-image: url("../../../public/imgs/spiner.jfif");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+}
+
+
+
+.loader:before , .loader:after{
+  content: '';
+  border-radius: 50%;
+  position: absolute;
+  inset: 0;
+  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.3) ;
+}
+.loader:after {
+  box-shadow: 0 3px 0 orange ;
+  animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+  0% {  transform: rotate(0)}
+  100% { transform: rotate(360deg)}
+}
 
 
 
