--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -416,12 +416,11 @@ body{
 
 /*layout-loading*/
 .layout-loader{
-    background-color: white;
     width: 100%;
     height: 100vh;
 }
 .loader {
-background: gray;
+background: white;
   position: relative;
   width: 120px;
   height: 120px; 
@@ -447,10 +446,10 @@ background: gray;
   border-radius: 50%;
   position: absolute;
   inset: 0;
-  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.3) ;
+  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.3) ;
 }
 .loader:after {
-  box-shadow: 0 3px 0 orange ;
+  box-shadow: 0 2px 0 #03245a ;
   animation: rotate 2s linear infinite;
 }
 
@@ -459,11 +458,41 @@ background: gray;
   100% { transform: rotate(360deg)}
 }
 
+/*999*/
+.loader2, .loader2:before, .loader2:after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  animation-fill-mode: both;
+  animation: bblFadInOut 1.8s infinite ease-in-out;
+}
+.loader2 {
+  color: #608575;
+  font-size: 7px;
+  position: relative;
+  text-indent: -9999em;
+  transform: translateZ(0);
+  animation-delay: -0.16s;
+}
+.loader2:before,
+.loader2:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+.loader2:before {
+  left: -3.5em;
+  animation-delay: -0.32s;
+}
+.loader2:after {
+  left: 3.5em;
+}
 
-
-
-
-
+@keyframes bblFadInOut {
+  0%, 80%, 100% { box-shadow: 0 2.5em 0 -1.3em }
+  40% { box-shadow: 0 2.5em 0 0 }
+}
+    
 
 
 
