--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -149,7 +149,7 @@ body{
   --c: #fff;
   /* text color */
   background: linear-gradient(90deg, orange 33%, #fff5, #0000 67%) var(--_p,100%)/300% no-repeat,
-    #004dff;
+    #03245a;
   /* background color */
   color: #0000;
   border: none;
