add pages for hotels and flights and other

--- a/src/app/[lng]/_components/style.css
+++ b/src/app/[lng]/_components/style.css
@@ -11,7 +11,7 @@ body{
     background-image: url("../../../../public/imgs/elhag2.png");
 }
 .elgiwar-works .box1 .img2{
-    background-image: url("../../../../public/imgs/booking.png");
+    background-image: url("../../../../public/imgs/demostic.jpeg");
 }.elgiwar-works .box1 .img3{
     background-image: url("../../../../public/imgs/outside-travels.png");
 }.elgiwar-works .box1 .img4{
