--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -3,6 +3,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities; 
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
 
 body{
     font-family: "Cairo", sans-serif;
@@ -26,8 +31,7 @@ body{
     font-size: 30px !important;
 }
 
-/**/
-
+/*medi  queries global*/
 /* start  style section of the header responsive in md screens and less  */
 @media screen and (min-width:1100px){
     .main-slider .content-box .desc{
@@ -47,7 +51,7 @@ body{
         padding: 0 !important
     }
 }
-/*media for md */
+/*media for md and less */
 @media screen and (max-width:767px) {
     .nav-links{
       display:block !important;
@@ -87,7 +91,7 @@ body{
     
     }
   } 
-/*media for sm */
+/*media for sm and less */
 @media screen and (max-width:500px){
     .swiper {
   width: 100%;
@@ -110,7 +114,7 @@ body{
 }
 
 
-/*55 main slider img slide for home*/
+/*55 main slider img  for home*/
 .ele1-slide{
     background-image: url("../../../public/imgs/elhag.png");
     background-size: cover;
@@ -143,13 +147,23 @@ body{
     background-repeat: no-repeat;
     background-position: center
 }
+/*animation for mainslider im home (content)*/
+@keyframes slideUp {
+            0% {
+                transform: translateY(150%);
+                opacity: 0;
+            }
+            100% {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
 
+        .swiper-slide-active .content {
+            animation: slideUp 1s ease-in-out forwards;
 
-
-
-
-
-/* CSS */
+}
+/* ----------start CSS button global-------------- */
 .button-92 {
   --c: #fff;
   /* text color */
@@ -185,7 +199,8 @@ body{
   cursor: pointer;
   padding: .1em .3em;
 }
-
+/* ----------end CSS button global-------------- */
+/* ----------start CSS dot animation for section Features -------------- */
 /*dot*/
 @keyframes ping {
   0% {
@@ -220,39 +235,9 @@ body{
     animation: ping 1.7s ease infinite;
   opacity: 0.8;
 }
-/*animation for mainslider*/
-@keyframes slideUp {
-            0% {
-                transform: translateY(150%);
-                opacity: 0;
-            }
-            100% {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
-        .swiper-slide-active .content {
-            animation: slideUp 1s ease-in-out forwards;
-
-}
-/***************/
-
-.social-bar {
-    display: flex;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0 0 60px rgba(93, 70, 232, 0.15);
-  border: 1px solid #ebe9e9;
-}
-.iconpad {
-    width: 100%;
-}
-.mb-3, .my-3 {
-    margin-bottom: 1rem!important;
-}
-
-.process-scetion .slider-nav-item {
+/* ----------end CSS dot animation for section Features -------------- */
+/*------------------ start social icons footer------------------------*/
+.process-scetion .icon-up {
     position: relative;
     flex-grow: 0;
     flex-shrink: 0;
@@ -274,10 +259,7 @@ body{
     justify-content: center;
     align-items: center;
 }
-
-
-
-.slider-nav-item:before {
+.icon-up:before {
     position: absolute;
     content: "";
     height: calc(100% + 16px);
@@ -296,7 +278,7 @@ body{
         display: flex;
 }
 
-.process-scetion .slider-nav-item {
+.process-scetion .icon-up {
     position: relative;
     flex-grow: 0;
     flex-shrink: 0;
@@ -307,7 +289,7 @@ body{
     transition: all .4s ease;
 
 }
-.slider-nav-item:before
+.icon-up:before
 {
         position: absolute;
     content: "";
@@ -320,11 +302,11 @@ body{
     animation: 1.5s linear 0s normal none infinite focuse;
 }
 
-    .process-scetion .slider-nav-item:nth-child(2) {
+    .process-scetion .icon-up:nth-child(2) {
       color: #40beff; }
     
     
-    .process-scetion .slider-nav-item:after {
+    .process-scetion .icon-up:after {
       position: absolute;
       top: 50%;
       height: 2px;
@@ -333,15 +315,15 @@ body{
       background: url("../../../public/imgs/line.png") repeat 0 0;
       z-index: 0;
       animation: slide 1s linear infinite; }
-    .process-scetion .slider-nav-item:last-child:after {
+    .process-scetion .icon-up:last-child:after {
       display: none; }
-    .process-scetion .slider-nav-item .ikon {
+    .process-scetion .icon-up .ikon {
       font-size: 50px;
       line-height: 80px; }
 
 
    
-      .process-scetion .slider-nav-item.active:before {
+      .process-scetion .icon-up.active:before {
         position: absolute;
         content: "";
         height: calc(100% + 16px);
@@ -382,7 +364,7 @@ body{
 }
 
 
-.slider-nav-item:after {
+.icon-up:after {
     position: absolute;
     top: 50%;
     height: 2px;
@@ -392,9 +374,11 @@ body{
     animation: slide 1s linear infinite;
 }
 .mt100{margin-top:100px;}
+/*------------------ end social icons footer------------------------*/
+
 /*
  * ----------------------------------------
- * animation jello-horizontal
+ * animation social icons
  * ----------------------------------------
  */
 .social-bar a:hover i
@@ -419,7 +403,7 @@ body{
     animation: heartbeat 1.5s ease-in-out infinite;
   }
 
-/*layout-loading*/
+/*-------------------------layout-loading-------------------------*/
 .layout-loader{
     width: 100%;
     height: 100vh;
@@ -432,8 +416,6 @@ background: white;
     border-radius: 50%
 
 }
-
-
 .layout-loader .company-logo{ 
      width: 116px;
   height: 116px; 
@@ -443,9 +425,6 @@ background: white;
     background-repeat: no-repeat;
     border-radius: 50%;
 }
-
-
-
 .loader:before , .loader:after{
   content: '';
   border-radius: 50%;
@@ -497,7 +476,7 @@ background: white;
   0%, 80%, 100% { box-shadow: 0 2.5em 0 -1.3em }
   40% { box-shadow: 0 2.5em 0 0 }
 }
-/*    ******/
+/*    -----------end loading layout-------------------------------*/
 
   
 
