add img for main slider

--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -122,7 +122,7 @@ body{
     background-position: center
 }
 .ele2-slide{
-    background-image: url("../../../public/imgs/flight4.gif");
+    background-image: url("../../../public/imgs/fly.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center
