--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -16,7 +16,7 @@ body{
 /**/
 .swiper {
   width: 100%;
-    height: 90vh;
+    height: 95vh;
     }
 .swiper-slide {
   font-size: 18px;
@@ -95,7 +95,7 @@ body{
 @media screen and (max-width:500px){
     .swiper {
   width: 100%;
-    height: 70vh;
+    height: 80vh;
         cursor:pointer
 }
     
@@ -115,27 +115,6 @@ body{
 
 
 /*55 main slider img  for home*/
-.ele1-slide{
-    background-image: url("../../../public/imgs/elhag.png");
-}
-.ele2-slide{
-    background-image: url("../../../public/imgs/fly.gif");
-}
-.ele3-slide{
-    background-image: url("../../../public/imgs/hotels-reserv.png");
-    
-}
-.ele4-slide{
-    background-image: url("../../../public/imgs/ggg.gif");
-}
-.bg-img{
-    background-image: url("../../../public/imgs/jj.jpg");
-}
-.ele1-slide,.ele2-slide,.ele3-slide,.ele4-slide{
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center
-}
 /*animation for mainslider im home (content)*/
 @keyframes slideUp {
             0% {
@@ -408,7 +387,7 @@ background: white;
 .layout-loader .company-logo{ 
      width: 116px;
   height: 116px; 
-     background-image: url("../../../public/imgs/spiner.jfif");
+     background-image: url("../../../public/imgs/spiner.jpg");
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
