--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -29,7 +29,9 @@ body{
 {
     color: orange;
     font-size: 30px !important;
+    
 }
+
 
 /*medi  queries global*/
 /* start  style section of the header responsive in md screens and less  */
@@ -38,6 +40,15 @@ body{
         width: 60% !important;
         
     }
+        .swiper-button-next{
+    position: absolute!important;
+    left: 50px !important;
+}
+        .swiper-button-prev{
+    position: absolute!important;
+    right: 12px !important;
+}
+    
 }
 /*media fro xl */
 @media screen and (min-width:992px){
@@ -45,6 +56,7 @@ body{
         width: 80%;
         
     }
+
 }
 @media screen and (min-width:767px){
     .nav-links ul li:hover{
@@ -100,7 +112,7 @@ body{
 }
     
 .main-slider .overlay{
-    margin-bottom: 26px ;
+    margin-bottom: 40px ;
     
 }
     .swiper-button-prev,
