optmize and make booking form component clean code readable

--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -519,6 +519,13 @@ background: white;
 }
 /*    -----------end loading layout-------------------------------*/
 
-  
+/*
+.swiper-slide-active ,.swiper-slide-next{
+    width: 50% !important;
+}
+.swiper-slide > div{
+    max-width: 100% !important;
+}
+*/
 
 
