--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -1,18 +1,17 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @tailwind base;
 @tailwind components;
-@tailwind utilities; 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-html{
-    scroll-behavior: smooth
+@tailwind utilities;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-body{
-    font-family: "Cairo", sans-serif;
+html {
+  scroll-behavior: smooth;
+}
+body {
+  font-family: "Cairo", sans-serif;
 }
 /*header social icons */
 a {
@@ -21,11 +20,11 @@ a {
 .social-fixed {
   position: absolute;
   top: 361%;
-    left: -260px;
+  left: -260px;
 }
 .social-fixed ul {
   padding: 0px;
-/*  transform: translate(-270px, 0);*/
+  /*  transform: translate(-270px, 0);*/
 }
 .social-fixed ul li {
   display: block;
@@ -46,7 +45,7 @@ a {
   transform: translate(110px, 0);
 }
 .social-fixed ul li:nth-child(2):hover svg {
-    color: white;
+  color: white;
 }
 .social-fixed ul li:nth-child(3):hover {
   transform: translate(110px, 0);
@@ -61,8 +60,8 @@ a {
 /*slider*/
 .swiper {
   width: 100%;
-    height: 95vh;
-    }
+  height: 95vh;
+}
 .swiper-slide {
   font-size: 18px;
   display: flex;
@@ -70,153 +69,141 @@ a {
   align-items: center;
 }
 .swiper-button-next:after,
-.swiper-button-prev:after
-{
-    color: orange;
-    font-size: 30px !important;
-    
+.swiper-button-prev:after {
+  color: orange;
+  font-size: 30px !important;
 }
-.swiper-button-next,.swiper-button-prev{
-    top: 65% !important;
+.swiper-button-next,
+.swiper-button-prev {
+  top: 65% !important;
 }
-.swiper-button-next{
-    right: 97% !important;
+.swiper-button-next {
+  right: 97% !important;
 }
 /*medi  queries global*/
 /* start  style section of the header responsive in md screens and less  */
-@media screen and (min-width:1100px){
-    .main-slider .content-box .desc{
-        width: 60% !important;
-        
-    }
-        .swiper-button-next{
-    position: absolute!important;
+@media screen and (min-width: 1100px) {
+  .main-slider .content-box .desc {
+    width: 60% !important;
+  }
+  .swiper-button-next {
+    position: absolute !important;
     left: 50px !important;
-}
-        .swiper-button-prev{
-    position: absolute!important;
+  }
+  .swiper-button-prev {
+    position: absolute !important;
     right: 12px !important;
-}
-    
+  }
 }
 /*media fro xl */
-@media screen and (min-width:992px){
-    .main-slider .content-box .desc{
-        width: 80%;
-        
-    }
-.swiper-button-next{
+@media screen and (min-width: 992px) {
+  .main-slider .content-box .desc {
+    width: 80%;
+  }
+  .swiper-button-next {
     right: 97% !important;
+  }
 }
-}
-@media screen and (min-width:767px){
-    .nav-links ul li:hover{
-        padding: 0 !important
-    }
-
+@media screen and (min-width: 767px) {
+  .nav-links ul li:hover {
+    padding: 0 !important;
+  }
 }
 /*media for md and less */
-@media screen and (max-width:767px) {
-    .nav-links{
-      display:block !important;
-      position:fixed;
-      z-index:10;
-      top:99px;
-      left:-100%;
-      width:60%;
-      background:black;
-      transition :1s ease-in-out;
-      height:100vh;
-    
-    }
-    .show{
-      left:0% !important;
-      transition :.6s ease-in-out;
-    
-    } 
-    .nav-links ul{
-      align-items:flex-start !important;
-      flex-direction: column;
-      padding-top:20px;
-      padding-right:10px;
-    }
-    .nav-links ul a{
-      color:white !important;
-    }
-    .nav-links ul li{
-      padding-left:12px;
-      transition:.2s ease-in-out;
-    }
-    .nav-links ul li:hover{
-      transition:.4s ease-in-out;
-    }
-    .nav-links ul li:hover a{
-      color:orange  !important;
-    
-    }
-        .swiper-button-next{
+@media screen and (max-width: 767px) {
+  .nav-links {
+    display: block !important;
+    position: fixed;
+    z-index: 10;
+    top: 99px;
+    left: -100%;
+    width: 60%;
+    background: black;
+    transition: 1s ease-in-out;
+    height: 100vh;
+  }
+  .show {
+    left: 0% !important;
+    transition: 0.6s ease-in-out;
+  }
+  .nav-links ul {
+    align-items: flex-start !important;
+    flex-direction: column;
+    padding-top: 20px;
+    padding-right: 10px;
+  }
+  .nav-links ul a {
+    color: white !important;
+  }
+  .nav-links ul li {
+    padding-left: 12px;
+    transition: 0.2s ease-in-out;
+  }
+  .nav-links ul li:hover {
+    transition: 0.4s ease-in-out;
+  }
+  .nav-links ul li:hover a {
+    color: orange !important;
+  }
+  .swiper-button-next {
     right: 94% !important;
+  }
 }
-  } 
 /*media for sm and less */
-@media screen and (max-width:500px){
-/*
+@media screen and (max-width: 500px) {
+  /*
     .social-fixed {
     left: -10%;
 }
 */
-    .swiper {
-  width: 100%;
+  .swiper {
+    width: 100%;
     height: 80vh;
-        cursor:pointer
-}
-    
-.main-slider .overlay{
-    margin-bottom: 40px ;
-    
-}
-    .swiper-button-prev,
-     .swiper-button-next
-    {
-      display: none !important;
-    }
-   .main-slider .swiper-pagination {
-        margin-bottom: -5px !important;
-    }
-    
-}
+    cursor: pointer;
+  }
 
+  .main-slider .overlay {
+    margin-bottom: 40px;
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    display: none !important;
+  }
+  .main-slider .swiper-pagination {
+    margin-bottom: -5px !important;
+  }
+}
 
 /*55 main slider img  for home*/
 /*animation for mainslider im home (content)*/
 @keyframes slideUp {
-            0% {
-                transform: translateY(150%);
-                opacity: 0;
-            }
-            100% {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
+  0% {
+    transform: translateY(150%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 
-        .swiper-slide-active .content {
-            animation: slideUp 1s ease-in-out forwards;
-
+.swiper-slide-active .content {
+  animation: slideUp 1s ease-in-out forwards;
 }
 /* ----------start CSS button global-------------- */
 .button-92 {
   --c: #fff;
   /* text color */
-  background: linear-gradient(90deg, orange 33%, #fff5, #0000 67%) var(--_p,100%)/300% no-repeat,
+  background: linear-gradient(90deg, orange 33%, #fff5, #0000 67%)
+      var(--_p, 100%) / 300% no-repeat,
     #03245a;
   /* background color */
   color: #0000;
   border: none;
-  transform: perspective(500px) rotateY(calc(20deg*var(--_i,-1)));
-  text-shadow: calc(var(--_i,-1)* 0.08em) -.01em 0   var(--c),
-    calc(var(--_i,-1)*-0.08em)  .01em 2px #0004;
-  outline-offset: .1em;
+  transform: perspective(500px) rotateY(calc(20deg * var(--_i, -1)));
+  text-shadow: calc(var(--_i, -1) * 0.08em) -0.01em 0 var(--c),
+    calc(var(--_i, -1) * -0.08em) 0.01em 2px #0004;
+  outline-offset: 0.1em;
   transition: 0.3s;
 }
 
@@ -229,7 +216,7 @@ a {
 .button-92:active {
   text-shadow: none;
   color: var(--c);
-  box-shadow: inset 0 0 9e9q #0005;
+  box-shadow: inset 0 0 9e9Q #0005;
   transition: 0s;
 }
 
@@ -238,7 +225,7 @@ a {
   font-size: 1.2rem;
   margin: 0;
   cursor: pointer;
-  padding: .1em .3em;
+  padding: 0.1em 0.3em;
 }
 /* ----------end CSS button global-------------- */
 /* ----------start CSS dot animation for section Features -------------- */
@@ -255,14 +242,14 @@ a {
 }
 
 .ping {
-    width: 6px;
-    height: 6px;
+  width: 6px;
+  height: 6px;
   padding-left: 1em;
 }
 
 .ping::before,
 .ping::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0.25em;
   left: 0;
@@ -273,214 +260,183 @@ a {
 }
 
 .ping::before {
-    animation: ping 1.7s ease infinite;
+  animation: ping 1.7s ease infinite;
   opacity: 0.8;
 }
 /* ----------end CSS dot animation for section Features -------------- */
 /*------------------ start social icons footer------------------------*/
 .process-scetion .icon-up {
-    position: relative;
-    flex-grow: 0;
-    flex-shrink: 0;
-    border-radius: 50%;
-    text-align: center;
-    background: #fff;
-    cursor: pointer;
-    transition: all .4s ease;
+  position: relative;
+  flex-grow: 0;
+  flex-shrink: 0;
+  border-radius: 50%;
+  text-align: center;
+  background: #fff;
+  cursor: pointer;
+  transition: all 0.4s ease;
 }
 
 .social-icons a {
-    border-radius: 50px;
-    line-height: 52px;
-   
-    box-shadow: 0 5px 25px rgba(93, 70, 232, 0.15);
-    margin: 2px;
-    font-size: 22px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  border-radius: 50px;
+  line-height: 52px;
+
+  box-shadow: 0 5px 25px rgba(93, 70, 232, 0.15);
+  margin: 2px;
+  font-size: 22px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .icon-up:before {
-    position: absolute;
-    content: "";
-    height: calc(100% + 16px);
-    width: calc(100% + 16px);
-    top: -8px;
-    left: -8px;
-    border-radius: 50%;
-    border: 1px solid rgba(132, 132, 164, 0.35);
-    animation: 1.5s linear 0s normal none infinite focuse;
+  position: absolute;
+  content: "";
+  height: calc(100% + 16px);
+  width: calc(100% + 16px);
+  top: -8px;
+  left: -8px;
+  border-radius: 50%;
+  border: 1px solid rgba(132, 132, 164, 0.35);
+  animation: 1.5s linear 0s normal none infinite focuse;
 }
 
-
-
 /*socil*/
-.slider-nav{
-        display: flex;
+.slider-nav {
+  display: flex;
 }
 
 .process-scetion .icon-up {
-    position: relative;
-    flex-grow: 0;
-    flex-shrink: 0;
-    border-radius: 50%;
-    text-align: center;
-    background: #fff;
-    cursor: pointer;
-    transition: all .4s ease;
-
+  position: relative;
+  flex-grow: 0;
+  flex-shrink: 0;
+  border-radius: 50%;
+  text-align: center;
+  background: #fff;
+  cursor: pointer;
+  transition: all 0.4s ease;
 }
-.icon-up:before
-{
-        position: absolute;
-    content: "";
-    height: calc(100% + 16px);
-    width: calc(100% + 16px);
-    top: -8px;
-    left: -8px;
-    border-radius: 50%;
-    border: 1px solid rgba(132, 132, 164, 0.35);
-    animation: 1.5s linear 0s normal none infinite focuse;
+.icon-up:before {
+  position: absolute;
+  content: "";
+  height: calc(100% + 16px);
+  width: calc(100% + 16px);
+  top: -8px;
+  left: -8px;
+  border-radius: 50%;
+  border: 1px solid rgba(132, 132, 164, 0.35);
+  animation: 1.5s linear 0s normal none infinite focuse;
 }
 
-    .process-scetion .icon-up:nth-child(2) {
-      color: #40beff; }
-    
-    
-    .process-scetion .icon-up:after {
-      position: absolute;
-      top: 50%;
-      height: 2px;
-      content: '';
-      width: 100%;
-      background: url("../../../public/imgs/line.png") repeat 0 0;
-      z-index: 0;
-      animation: slide 1s linear infinite; }
-    .process-scetion .icon-up:last-child:after {
-      display: none; }
-    .process-scetion .icon-up .ikon {
-      font-size: 50px;
-      line-height: 80px; }
+.process-scetion .icon-up:nth-child(2) {
+  color: #40beff;
+}
 
+.process-scetion .icon-up:after {
+  position: absolute;
+  top: 50%;
+  height: 2px;
+  content: "";
+  width: 100%;
+  background: url("../../../public/imgs/line.png") repeat 0 0;
+  z-index: 0;
+  animation: slide 1s linear infinite;
+}
+.process-scetion .icon-up:last-child:after {
+  display: none;
+}
+.process-scetion .icon-up .ikon {
+  font-size: 50px;
+  line-height: 80px;
+}
 
-   
-      .process-scetion .icon-up.active:before {
-        position: absolute;
-        content: "";
-        height: calc(100% + 16px);
-        width: calc(100% + 16px);
-        top: -8px;
-        left: -8px;
-        border-radius: 50%;
-        border: 1px solid rgba(132, 132, 164, 0.35);
-        animation: 1.5s linear 0s normal none infinite focuse; }
+.process-scetion .icon-up.active:before {
+  position: absolute;
+  content: "";
+  height: calc(100% + 16px);
+  width: calc(100% + 16px);
+  top: -8px;
+  left: -8px;
+  border-radius: 50%;
+  border: 1px solid rgba(132, 132, 164, 0.35);
+  animation: 1.5s linear 0s normal none infinite focuse;
+}
 
 @keyframes focuse {
   0% {
     transform: scale(0.8);
-    opacity: 1; }
+    opacity: 1;
+  }
   75% {
     transform: scale(1.2);
-    opacity: 0; }
+    opacity: 0;
+  }
   100% {
     transform: scale(1.2);
-    opacity: 0; } }
+    opacity: 0;
+  }
+}
 @keyframes slide {
   from {
-    background-position: 0 0; }
+    background-position: 0 0;
+  }
   to {
-    background-position: 40px 0; } }
-
-.shadow-img1{
-    background:red;
-    background-repeat:no-repeat;
-    background-position:bottom;
+    background-position: 40px 0;
+  }
 }
 
-.shadow-img2{
-        background-position: bottom;
-    background: red;
-    background-size: 100%;
-    background-repeat: no-repeat;
+.shadow-img1 {
+  background: red;
+  background-repeat: no-repeat;
+  background-position: bottom;
 }
 
+.shadow-img2 {
+  background-position: bottom;
+  background: red;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
 
 .icon-up:after {
-    position: absolute;
-    top: 50%;
-    height: 2px;
-    content: '';
-    width: 100%;
-    z-index: 0;
-    animation: slide 1s linear infinite;
+  position: absolute;
+  top: 50%;
+  height: 2px;
+  content: "";
+  width: 100%;
+  z-index: 0;
+  animation: slide 1s linear infinite;
 }
-.mt100{margin-top:100px;}
+.mt100 {
+  margin-top: 100px;
+}
 /*------------------ end social icons footer------------------------*/
-
-/*
- * ----------------------------------------
- * animation social icons
- * ----------------------------------------
- */
-.social-bar a:hover i
-{
+/*---------------animation social icons--------------------------*/
+.social-bar a:hover i {
   -webkit-animation: jello-horizontal 0.9s both;
-	        animation: jello-horizontal 0.9s both;
+  animation: jello-horizontal 0.9s both;
 }
 /*000*/
-  @keyframes heartbeat {
-    0%, 100% {
-      transform: scale(1);
-    }
-    25%, 75% {
-      transform: scale(1.1);
-    }
-    50% {
-      transform: scale(1.2);
-    }
+@keyframes heartbeat {
+  0%,
+  100% {
+    transform: scale(1);
   }
-
-  .animate-heartbeat {
-    animation: heartbeat 1.5s ease-in-out infinite;
+  25%,
+  75% {
+    transform: scale(1.1);
   }
-
-/*-------------------------layout-loading-------------------------*/
-.loader {
-background: white;
-  position: relative;
-  width: 120px;
-  height: 120px; 
-    border-radius: 50%
-
-}
-.layout-loader .company-logo{ 
-     width: 116px;
-  height: 116px; 
-     background-image: url("../../../public/imgs/spiner.jpg");
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    border-radius: 50%;
-}
-.loader:before , .loader:after{
-  content: '';
-  border-radius: 50%;
-  position: absolute;
-  inset: 0;
-  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.3) ;
-}
-.loader:after {
-  box-shadow: 0 2px 0 #03245a ;
-  animation: rotate 2s linear infinite;
+  50% {
+    transform: scale(1.2);
+  }
 }
 
-@keyframes rotate {
-  0% {  transform: rotate(0)}
-  100% { transform: rotate(360deg)}
+.animate-heartbeat {
+  animation: heartbeat 1.5s ease-in-out infinite;
 }
 
-/*999*/
-.loader2, .loader2:before, .loader2:after {
+/*layout loader dots*/
+.loader2,
+.loader2:before,
+.loader2:after {
   border-radius: 50%;
   width: 2.5em;
   height: 2.5em;
@@ -497,7 +453,7 @@ background: white;
 }
 .loader2:before,
 .loader2:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
 }
@@ -510,18 +466,13 @@ background: white;
 }
 
 @keyframes bblFadInOut {
-  0%, 80%, 100% { box-shadow: 0 2.5em 0 -1.3em }
-  40% { box-shadow: 0 2.5em 0 0 }
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
 }
 /*    -----------end loading layout-------------------------------*/
-
-/*
-.swiper-slide-active ,.swiper-slide-next{
-    width: 50% !important;
-}
-.swiper-slide > div{
-    max-width: 100% !important;
-}
-*/
-
-
