fix some isuues in accessbility web browser and update structure pages

--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -13,7 +13,7 @@ html {
 body {
   font-family: "Cairo", sans-serif;
 }
-/*header social icons */
+/*header social iconsa */
 a {
   text-decoration: none;
 }
